# norway-api-emitter

./: Dockerfile  README.md  devenv.nix  devenv.yaml  main.py  pyproject.toml  secretspec.toml
